# Python-Module-08

./: README.md
ex0/: construct.py
ex01/: loading.py  pyproject.toml
ex02/: oracle.py
