[tool.poetry]
name = "python-module08-ex01"
version = "0.1.0"
description = "Matrix data analysis tool demonstrating dependency management using Poetry."
authors = ["hwakatsu"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "^1.26.0"
matplotlib = "^3.7.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
